Font spacing corrections
Corrected font spacing on h2

--- a/css/style.css
+++ b/css/style.css
@@ -160,8 +160,7 @@ p{
     text-align: center;
     max-width: 1500px;
     margin: 0 auto;
-    /* padding: 50px 0; */
-    padding: 50px 20px;
+    padding: 50px 0px;
 }
 #about .col-left{
     width: 250px;
@@ -363,7 +362,7 @@ p{
 }
 /* end of portfolio section */
 
-/* conact me section */
+/* contact me section */
 
 
 /* fix alignment of h1 h2, p and contact items */
@@ -384,7 +383,7 @@ p{
     width: 100%%;
 }
 #contact .contact-item{
-    width: 100%;
+    width: 80%;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -396,11 +395,16 @@ p{
     padding: 30px;
     box-shadow: 0px 0px 20px 0px crimson;
 }
-
-#contact .contact-item h2{
-    margin-top: 10px;
+#contact .contact-info h2{
+    font-size: 2.3rem;
+    font-weight: 500;
+    margin-bottom: 5px;
 }
-
+#contact .contact-info p{
+    font-size: 1.3rem;
+    line-height: 2rem;
+    font-weight: 500;
+}
 #contact .icon{
     width: 70px;
     margin: 0 auto;
